# XBotCore

./: CMakeLists.txt  README.md  setup.bash
examples/: CMakeLists.txt
examples/include/: IDDPExample1.h  IDDPExample2.h  XBotIDDPExample.h
examples/src/: example_iddp1.cpp  example_iddp2.cpp  example_iddp_main.cpp  example_iddp_main1.cpp  example_iddp_main2.cpp  example_xbot_iddp.cpp  example_xbot_iddp_main.cpp  homing_example.cpp
include/IOPlugin/: JointStateRemapper.h
include/Web/: SharedData.h  WebRobotState.h  WebSocketCivetHandler.h
include/XBotCore/: HALBase.h  HALInterface.h  HALInterfaceFactory.h  HALThread.h  XBotCore.h  XBotCoreThread.h
include/XBotCore-interfaces/: IXBotFPS.h  IXBotHand.h  IXBotJoint.h  XBotESC.h  XBotOptions.h  XBotPipes.h  XBotPlugin.h  XBotRT_ipc.h  XBotSharedMemory.h  XBotSharedObject.h  XDomainCommunication.h
include/XBotPlugin/: XBotCommunicationPlugin.h  XBotRTCommunication.h
include/XCM/: CommunicationInterfaceROS.h  CommunicationInterfaceWebServer.h  IOPluginFactory.h  PluginFactory.h  XBotCommunicationHandler.h  XBotCommunicationInterface.h  XBotCommunicationInterfaceFactory.h  XBotControlPlugin.h  XBotIDDP.h  XBotIPC.h  XBotPluginHandler.h  XBotXDDP.h
include/XCM/MessageInterfaces/: AdvrCommandMessage.h  AdvrJointState.h
include/robot_state_publisher_advr/: joint_state_listener.h  robot_state_publisher_advr.h
msg/: CommandAdvr.msg
scripts/: generate_XBot_IOPlugin.sh  generate_XBot_Plugin.sh  generate_XBot_PluginFSM.sh  get_xbot_config  open_xbot_config  set_xbot_config
skeleton/control/src/: plugin.cpp
skeleton/io/include/io_plugin/: io_plugin.h
skeleton/io/src/: io_plugin.cpp
src/: CommunicationInterfaceROS.cpp  CommunicationInterfaceWebServer.cpp  HALInterfaceFactory.cpp  HALThread.cpp  IOPluginFactory.cpp  Loader.cpp  NRTDeployer.cpp  PluginFactory.cpp  XBotCommunicationHandler.cpp  XBotCommunicationInterfaceFactory.cpp  XBotControlPlugin.cpp  XBotCore.cpp  XBotCoreThread.cpp  XBotESCUtils.cpp  XBotIDDP.cpp  XBotIPC.cpp  XBotMain.cpp  XBotNRT_thread.cpp  XBotPlugin.cpp  XBotPluginHandler.cpp  XBotRT_ipc.cpp  XBotRT_thread.cpp  XBotXDDP.cpp
src/IOPlugin/: CMakeLists.txt  JointStateRemapper.cpp
src/MessageInterfaces/: AdvrCommandMessage.cpp  AdvrJointState.cpp
src/Web/: HttpHandler.cpp  WebRobotState.cpp  WebSocketCivetHandler.cpp
src/XBotPlugin/: CMakeLists.txt  XBotCommunicationPlugin.cpp  XBotLoggingPlugin.cpp  XBotNRTRef.cpp  XBotRTCommunication.cpp
src/robot_state_publisher_advr/: joint_state_listener.cpp  robot_state_publisher.cpp  treefksolverposfull_recursive.cpp
